--- a/sources/nginx-openvpn.conf
+++ b/sources/nginx-openvpn.conf
@@ -39,7 +39,7 @@ server {
 		# Uncomment to enable naxsi on this location
 		# include /etc/nginx/naxsi.rules
         auth_basic "Restricted";
-        auth_basic_user_file /.htpasswd;
+        auth_basic_user_file /etc/openvpn/.htpasswd;
 	}
 }
 
